--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,7 @@
       "label": "Generate Posters",
       "type": "shell",
       "command": "make",
-      "args": [ "posters" ],
-
-      "dependsOn": ["Process SCSS"],
+      "args": ["posters"],
       "problemMatcher": [],
       "group": {
         "kind": "build",
@@ -19,7 +17,15 @@
     {
       "label": "Process SCSS",
       "type": "shell",
-      "command": "scss sass/main.scss:assets/css/main.css"
+      "command": "scss --watch sass/main.scss:assets/css/main.css",
+      "isBackground": true,
+      "problemMatcher": {
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "^\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)? - File change detected\\. Starting incremental compilation\\.\\.\\.",
+          "endsPattern": "^\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)? - Compilation complete\\. Watching for file changes\\."
+        }
+      }
     }
   ]
 }
