Removed duplicated posters Added default layout to poster collection

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,10 @@ theme: jekyll-theme-cayman
 collections:
   posters:
     output: true
+
+defaults:
+  - scope:
+      path: '' # an empty string here means all files in the project
+      type: 'posts' # previously `post` in Jekyll 2.2.
+    values:
+      layout: 'workshop-poster'
