--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ defaults:
       path: '' # an empty string here means all files in the project
       type: 'posters' # previously `post` in Jekyll 2.2.
     values:
-      layout: 'workshop-poster'
+      layout: workshop-poster
