Testing collection layout again

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,12 @@ theme: jekyll-theme-cayman
 
 collections:
   posters:
+    permalink: '/'
     output: true
+
+defaults:
+  - scope:
+      path: '' # an empty string here means all files in the project
+      type: 'posters' # previously `post` in Jekyll 2.2.
+    values:
+      layout: 'workshop-poster'
