--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ collections:
 
 defaults:
   - scope:
-      path: '' # an empty string here means all files in the project
+      path: '/' # an empty string here means all files in the project
       type: 'posters' # previously `post` in Jekyll 2.2.
     values:
       layout: 'workshop-poster'
