--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
 
 collections:
   posters:
@@ -34,3 +34,5 @@ background:
     color: black
     opacity: 0.5
 
+plugins:
+  - octopress-autoprefixer
